--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -45,6 +45,10 @@
           <h3>Pagos Hoy</h3>
           <p id="pagosHoy">0</p>
         </div>
+        <div class="key-metric">
+          <h3>Prestamos activos</h3>
+          <p id="prestamosActivos">0</p>
+        </div>
       </div>
 
 
